falta arreglar el error de que el modelo venta no me lo reconoce
